# joka238.github.io

./: 404.html  CMakeLists.txt  README.md  README_PAGES.md  README_web_privacy.md  config.json.example  deploy.sh  index.css  index.html  intex.html  style.css  suppage.html  verify.sh  website.html
assets/: style.css  viewer.js  viewer_enc.js
data/: index.enc
scripts/: build_mac.sh  build_pi.sh
session/: aljoscha.json  freundin.json
src/: crypto.cpp  crypto.hpp  github_client.cpp  github_client.hpp  main.cpp  strokes.hpp  util.hpp
systemd/: telepaint.service
telepaint_site_minimal/: index.html
